Fix margins on left/right aligned wrapped media and widgets

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -622,7 +622,7 @@ a:hover { text-decoration: underline; }
 }
 
 .wrapped_slot>.mediaelement, .wrapped_slot>.widgetContainer{
-	margin: 0rem 0 2.4rem 0;
+	margin: 2.4rem 0 2.4rem 0;
 }
 .wrapped_slot.right_slot>.mediaelement{
 	margin-left: 4.8rem;
